"keycloak security added"